--- a/Social proof section challenge/index.html
+++ b/Social proof section challenge/index.html
@@ -3,84 +3,137 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-
-    <title>Frontend Mentor | Social proof section</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
-    <link rel="stylesheet" href="main'.css" />
+    <title>Document</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div class="our-design">
-      <div class="first-section">
+    <div class="wrapper">
+      <header class="main-title">
         <h1 class="title">10,000+ of our users love our products.</h1>
-
-        <p>
+        <p class="description">
           We only provide great products combined with excellent customer
           service. See what our satisfied customers are saying about our
           services.
         </p>
-        <div class="star-rating">
-          <p>Rated 5 Stars in Reviews</p>
-          <p>Rated 5 Stars in Report Guru</p>
-          <p>Rated 5 Stars in BestTech</p>
-        </div>
-      </div>
+      </header>
 
-      <div class="reviews-list">
-        <div class="first-review">
-          <p>Colton Smith</p>
-          <div><span>Verified Buyer</span></div>
-          <p>
+      <main class="main-ratings">
+        <div class="rating1">
+          <div class="stars">
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+          </div>
+          <div class="rating_description">Rated 5 Stars in Reviews</div>
+        </div>
+
+        <div class="rating2">
+          <div class="stars">
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+          </div>
+          <div class="rating_description">Rated 5 Stars in Report Guru</div>
+        </div>
+        <div class="rating3">
+          <div class="stars">
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+            <img
+              src="/Social proof section challenge/Resources/images/icon-star.svg"
+              alt=""
+            />
+          </div>
+          <div class="rating_description">Rated 5 Stars in BestTech</div>
+        </div>
+      </main>
+
+      <footer class="main-cards">
+        <div class="card">
+          <img
+            src="/Social proof section challenge/Resources/images/image-colton.jpg"
+            alt=""
+          />
+          <h2 class="card_header">Colton Smith Verified Buyer</h2>
+          <p class="card_description">
             "We needed the same printed design as the one we had ordered a week
             prior. Not only did they find the original order, but we also
             received it in time. Excellent!"
           </p>
         </div>
-
-        <div class="second-review">
-          <p>Irene Roberts</p>
-          <div><span>Verified Buyer</span></div>
-          <p>
+        <div class="card">
+          <img
+            src="/Social proof section challenge/Resources/images/image-irene.jpg"
+            alt=""
+          />
+          <h2 class="card_header">Irene Roberts Verified Buyer</h2>
+          <p class="card_description">
             "Customer service is always excellent and very quick turn around.
             Completely delighted with the simplicity of the purchase and the
             speed of delivery."
           </p>
         </div>
-
-        <div class="third-review">
-          <p>Anne Wallace</p>
-          <div><span>Verified Buyer</span></div>
-          <p>
+        <div class="card">
+          <img
+            src="/Social proof section challenge/Resources/images/image-anne.jpg"
+            alt=""
+          />
+          <h2 class="card_header">Anne Wallace Verified Buyer</h2>
+          <p class="card_description">
             "Put an order with this company and can only praise them for the
             very high standard. Will definitely use them again and recommend
             them to everyone!"
           </p>
         </div>
-      </div>
-
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </div>
+      </footer>
     </div>
   </body>
 </html>
