--- a/Social proof section challenge/index.html
+++ b/Social proof section challenge/index.html
@@ -14,93 +14,95 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="main-title">
-        <h1 class="title">10,000+ of our users love our products.</h1>
-        <p class="description">
-          We only provide great products combined with excellent customer
-          service. See what our satisfied customers are saying about our
-          services.
-        </p>
-      </header>
+      <div class="top-section flex">
+        <header class="main-title">
+          <h1 class="title">10,000+ of our users love our products.</h1>
+          <p class="description">
+            We only provide great products combined with excellent customer
+            service. See what our satisfied customers are saying about our
+            services.
+          </p>
+        </header>
 
-      <main class="main-ratings">
-        <div class="rating1">
-          <div class="stars">
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
+        <main class="main-ratings">
+          <div class="rating1 flex">
+            <div class="stars">
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+            </div>
+            <div class="rating_description">Rated 5 Stars in Reviews</div>
           </div>
-          <div class="rating_description">Rated 5 Stars in Reviews</div>
-        </div>
 
-        <div class="rating2">
-          <div class="stars">
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
+          <div class="rating2 flex">
+            <div class="stars">
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+            </div>
+            <div class="rating_description">Rated 5 Stars in Report Guru</div>
           </div>
-          <div class="rating_description">Rated 5 Stars in Report Guru</div>
-        </div>
-        <div class="rating3">
-          <div class="stars">
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
-            <img
-              src="/Social proof section challenge/Resources/images/icon-star.svg"
-              alt=""
-            />
+          <div class="rating3 flex">
+            <div class="stars">
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+              <img
+                src="/Social proof section challenge/Resources/images/icon-star.svg"
+                alt=""
+              />
+            </div>
+            <div class="rating_description">Rated 5 Stars in BestTech</div>
           </div>
-          <div class="rating_description">Rated 5 Stars in BestTech</div>
-        </div>
-      </main>
+        </main>
+      </div>
 
       <footer class="main-cards">
         <div class="card">
